# scriptRunner

./: .gitignore  CMakeLists.txt  Makefile  README.md
ScriptRunner/src/lib/: CMakeLists.txt  cleanup.c  logging.c  misc.c  types.c
ScriptRunner/src/lib/include/: command.h  misc.h  os.h  types.h
ScriptRunner/tests/: test_cd.sh  test_time.sh  test_time_wait.sh
src/: cleanup.c  command.c  logging.c  os.c  scriptRunner.c  types.c
src/include/: cleanup.h  logging.h  types.h
testcase/: test_cleanup.sh  test_echo.sh  test_logging.sh  test_time.sh
